# modelapi

./: .dockerignore  Dockerfile  README.md  pyproject.toml
modelapi/: app.py  main.py  models.py  predicting.py
