[tool.poetry]
name = "modelapi"
version = "0.1.0"
description = "Practise API for training and deploying a model"
authors = ["Abaresag <abldvd.aresag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.3"
joblib = "^1.2.0"
pandas = "^1.5.2"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.17.1"
black = "^22.10.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
